# cleaning_managment_rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
cleaning_managment/: Cargo.toml
cleaning_managment/src/: main.rs
cleaning_managment/table_maker/: Cargo.toml
cleaning_managment/table_maker/src/: heb_cal.rs  lib.rs  main.rs
cleaning_managment/table_maker/src/list/: mod.rs  parse_soldiers.rs
cleaning_managment/table_reader/: Cargo.toml
cleaning_managment/table_reader/src/: lib.rs  reader.rs  sender.rs
src/: config.rs  main.rs
table_configs/: Cargo.toml
table_configs/src/: lib.rs
table_maker/: Cargo.toml
table_maker/src/: heb_cal.rs  lib.rs  table_construction.rs
table_maker/src/list/: mod.rs  parse_people.rs  parse_soldiers.rs
table_reader/: Cargo.toml
table_reader/src/: cli.rs  lib.rs  reader.rs  sender.rs
