[package]
name = "cleaning_managment"
version = "0.2.0"
edition = "***REMOVED***"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table_maker = { path = "./table_maker" }
table_reader = { path = "./table_reader" }
table_configs = { path = "./table_configs" }
chrono = "0.4.19"
clap = {version = "3.1.9", features=["derive"]}

[Workspaces]
members = [
    "table_maker",
    "table_reader",
    "table_configs",
]