[package]
name = "table_configs"
version = "0.1.0"
edition = "***REMOVED***"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.***REMOVED***", features = ["derive"]}
serde_json = "1.0.59"
chrono = "0.4.19"
home = "0.5.3"