[package]
name = "table_maker"
version = "0.1.0"
edition = "***REMOVED***"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table_configs = { path = "../table_configs" }
serde = { version = "1.0.***REMOVED***", features = ["derive"]}
serde_json = "1.0.59"
tokio = "0.2"
reqwest = "0.9"
#tokio = "1.18.2"
#reqwest = { version = "0.11.10", default-features = false, features = ["blocking","rustls-tls"] }
futures = "0.3"
chrono = "0.4.19"
csv = "1.1.6"
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }