[package]
name = "table_reader"
version = "0.1.0"
edition = "***REMOVED***"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.***REMOVED***", features = ["derive"]}
serde_json = "1.0.59"
tokio = "0.2"
reqwest = "0.9"
chrono = "0.4.19"
csv = "1.1.6"
table_maker = { path = "../table_maker"}
table_configs = { path = "../table_configs" }
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }