[package]
name = "table_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0.59"
tokio = "0.2"
reqwest = "0.9"
chrono = "0.4.19"
csv = "1.1.6"
table_maker = { path = "../table_maker"}
table_configs = { path = "../table_configs" }
colored = "2.0.0"


[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }